chore: first attempt to build the mailbox with OpenJDK 11